--- a/package.json
+++ b/package.json
@@ -54,14 +54,15 @@
     "docs": "node scripts/generate-readme.js",
     "simple-integration-test": "jest --maxWorkers=5 simple-suite",
     "complex-integration-test": "jest --maxWorkers=5 integration",
-    "postinstall": "node ./scripts/postinstall.js",
-    "preuninstall": "node ./scripts/preuninstall.js"
+    "postinstall": "babel-node ./scripts/postinstall.js",
+    "preuninstall": "babel-node ./scripts/preuninstall.js"
   },
   "jest": {
     "testRegex": "(\\.|/)(tests)\\.js$",
     "setupTestFrameworkScriptFile": "<rootDir>/tests/setupTests.js"
   },
   "devDependencies": {
+    "babel-cli": "^6.18.0",
     "chai": "^3.5.0",
     "coveralls": "^2.11.12",
     "eslint": "^3.3.1",
