--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
     "docs": "node scripts/generate-readme.js",
     "simple-integration-test": "jest --maxWorkers=5 simple-suite",
     "complex-integration-test": "jest --maxWorkers=5 integration",
-    "postinstall": "babel-node ./scripts/postinstall.js",
-    "preuninstall": "babel-node ./scripts/preuninstall.js"
+    "postinstall": "node ./scripts/postinstall.js",
+    "preuninstall": "node ./scripts/preuninstall.js"
   },
   "jest": {
     "testRegex": "(\\.|/)(tests)\\.js$",
@@ -84,7 +84,6 @@
     "archiver": "^1.1.0",
     "async": "^1.5.2",
     "aws-sdk": "^2.7.13",
-    "babel-cli": "^6.18.0",
     "bluebird": "^3.4.0",
     "chalk": "^1.1.1",
     "download": "^5.0.2",
