--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
     "docs": "node scripts/generate-readme.js",
     "simple-integration-test": "jest --maxWorkers=5 simple-suite",
     "complex-integration-test": "jest --maxWorkers=5 integration",
-    "postinstall": "node --harmony ./scripts/postinstall.js",
-    "preuninstall": "node --harmony ./scripts/preuninstall.js"
+    "postinstall": "node --es_staging ./scripts/postinstall.js",
+    "preuninstall": "node --es_staging ./scripts/preuninstall.js"
   },
   "jest": {
     "testRegex": "(\\.|/)(tests)\\.js$",
